--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^3.2.3",
+    "styled-reset": "^4.3.4"
   },
   "homepage": "http://ksy7533.github.io/skp_project"
 }
