--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "gh-pages": "^3.2.3",
+    "lodash": "^4.17.21",
     "styled-reset": "^4.3.4"
   },
   "homepage": "http://ksy7533.github.io/skp_project"
