--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
   "devDependencies": {
     "gh-pages": "^3.2.3",
     "lodash": "^4.17.21",
-    "styled-reset": "^4.3.4"
+    "styled-reset": "^4.3.4",
+    "swiper": "^8.0.7"
   },
   "homepage": "http://ksy7533.github.io/skp_project"
 }
